header title and author names

--- a/proceedings.tex
+++ b/proceedings.tex
@@ -76,7 +76,7 @@
 % Paper metadata (use plain text, for PDF inclusion and later
 % re-using, if desired).  Use \emtpyauthor when submitting for review
 % so you remain anonymous.
-\def\plaintitle{SIGCHI Conference Proceedings Format}
+\def\plaintitle{Context-aware Communication in the Car}
 \def\plainauthor{First Author, Second Author, Third Author,
   Fourth Author, Fifth Author, Sixth Author}
 \def\emptyauthor{}
@@ -136,18 +136,18 @@
 
 \numberofauthors{3}
 \author{%
-  \alignauthor{Leave Authors Anonymous\\
-    \affaddr{for Submission}\\
-    \affaddr{City, Country}\\
-    \email{e-mail address}}\\
-  \alignauthor{Leave Authors Anonymous\\
-    \affaddr{for Submission}\\
-    \affaddr{City, Country}\\
-    \email{e-mail address}}\\
-  \alignauthor{Leave Authors Anonymous\\
-    \affaddr{for Submission}\\
-    \affaddr{City, Country}\\
-    \email{e-mail address}}\\
+  \alignauthor{Tobias Martin\\
+    \affaddr{University of Munich (LMU)}\\
+    \affaddr{Munich, Germany}\\
+    \email{t.martin@campus.lmu.de}}\\
+  \alignauthor{Stefan Lang\\
+    \affaddr{University of Munich (LMU)}\\
+    \affaddr{Munich, Germany}\\
+    \email{stefan.lang@campus.lmu.de}}\\
+  \alignauthor{Simon Weiser\\
+    \affaddr{University of Munich (LMU)}\\
+    \affaddr{Munich, Germany}\\
+    \email{simon.weiser@campus.lmu.de}}\\
 }
 
 \maketitle
