User Study Abschnitt + Charts

--- a/ATH_Paper_CCC.tex
+++ b/ATH_Paper_CCC.tex
@@ -481,6 +481,42 @@ the ribbon and ensure that ``Enable Accessibility and Reflow with
 tagged Adobe PDF'' is selected. You can then generate a tagged PDF by
 selecting ``Create PDF'' from the Acrobat ribbon.
 
+\section{User Study}
+For our user study we blablabla
+
+\begin{figure}
+\centering
+  \includegraphics[width=0.9\columnwidth]{figures/WouldYouCall_1}
+  \caption{User Study: Would you make the call (different scenarios)}~\label{fig:WouldYouCall_1}
+\end{figure}
+
+blablabla
+
+\begin{figure}
+\centering
+  \includegraphics[width=0.9\columnwidth]{figures/WouldYouCall_2}
+  \caption{User Study: Would you make the call (different scenarios)}~\label{fig:WouldYouCall_2}
+\end{figure}
+
+blablabla
+
+\begin{figure}
+\centering
+  \includegraphics[width=0.9\columnwidth]{figures/WouldYouCall_3}
+  \caption{User Study: Would you make the call (different scenarios)}~\label{fig:WouldYouCall_3}
+\end{figure}
+
+blablabla
+
+\begin{figure}
+\centering
+  \includegraphics[width=0.9\columnwidth]{figures/WhatAreYouWillingToShare}
+  \caption{User Study: What information are you willing to share}~\label{fig:WhatAreYouWillingToShare}
+\end{figure}
+
+blablabla
+
+
 \section{Conclusion}
 
 It is important that you write for the SIGCHI audience. Please read
