--- a/sample.bib
+++ b/sample.bib
@@ -1,3 +1,23 @@
+@Misc{you16,
+  author =       {Google Inc.},
+  title =        {Introducing the Awareness API, an easy way to make your apps context aware - Google I/O 2016},
+  howpublished = {Video},
+  month =        {May},
+  day =          18,
+  year =         2016,
+  note =         {Retrieved August 22, 2016 from
+                  \url{https://www.youtube.com/watch?v=37ia7S4Lsv4}},
+  annote =       {Video URL}
+}
+
+@ONLINE{goo16,
+author = {Google Inc.},
+title = {What is the Awareness API?},
+year = {2016},
+url = {https://developers.google.com/awareness/overview},
+note = {Retrieved August 22, 2016}
+}
+
 @Misc{CHINOSAUR:venue,
   author =       {@\_CHINOSAUR},
   key =          {_CHINOSAUR},
