Nachmehr Zeug für User Study

--- a/ATH_Paper_CCC.tex
+++ b/ATH_Paper_CCC.tex
@@ -265,9 +265,9 @@ In particular, we used the \textit{Fence API}\footnote{https://developers.google
 To evaluate our concept and the actual implementation we invited a total of 25 participants to our user study. As the overall goal was to evaluate if users perceive the context information provided by our application correctly, we decided to generate 10 different use-cases (scenarios). We vocally discussed each scenario with the current participant, but all the context information had to be pulled out from the running app on a provided smartphone. Differing by the call trigger (meaning the reason why a participant had to call a person) and the context the person being called is in, the participants had to decide whether they would like to: 
 
 \begin{enumerate}
-\item Make the call or
-\item Not make the call and
-\item Not make the call but send a text message and/or
+\item Make the call (or)
+\item Not make the call (and)
+\item Not make the call but send a text message (and/or)
 \item Not make the call but get notified when the driver status changes
 \end{enumerate}
 
@@ -281,7 +281,7 @@ The following figures visualise the outcome of our user study. Figure \ref{fig:W
   \caption{User Study: Would you make the call (different scenarios)}~\label{fig:WouldYouCall_1}
 \end{figure}
 
-In figure \ref{fig:WouldYouCall_1}
+Highlighted in figure \ref{fig:WouldYouCall_1} you can see three different scenarios with the person being calling in the status 'driving'. As anticipated the majority of participants would not make a call in this situation (red bar). Moreover the majority would not like to send a text message straight away, or get notified if the status of the driver changes. Regarding our concept this outcome allows us to suppose that participants pulled the correct context information out of the app and that they consider the safety of the person they want to call.
 
 \begin{figure}
 \centering
