--- a/ATH_Paper_CCC.tex
+++ b/ATH_Paper_CCC.tex
@@ -273,9 +273,9 @@ To evaluate our concept and the actual implementation we invited a total of 25 p
 
 Following the scenarios we asked additional questions with the participants acting the role of the driver (the person being called). Goal of these questions was to gather inside in the willingness of potential users to share more or less specific information.
 
-The following figures visualise the outcome of our user study. Figure \ref{fig:WouldYouCall_1} to \ref{fig:WouldYouCall_3} focus on the 10 different scenarios which can be distinguished along the x-axis. As mentioned they differ in the status the callee is in (driving, cycling, still). Distribution of the answers given by our participants can be seen along the y-axis, while colours visualise the four possible choices.
+The following figures visualise the outcome of our user study. Figure \ref{fig:WouldYouCall_1} to \ref{fig:WouldYouCall_3} focus on the ten different scenarios which can be distinguished along the x-axis. As mentioned they differ in the status the callee is in (driving, cycling, still). Distribution of the answers given by our participants can be seen along the y-axis, while colours visualise the four possible choices.
 
-\begin{figure}
+\begin{figure}[H]
 \centering
   \includegraphics[width=0.9\columnwidth]{figures/WouldYouCall_1}
   \caption{User Study: Would you make the call (status driving)}~\label{fig:WouldYouCall_1}
@@ -283,7 +283,7 @@ The following figures visualise the outcome of our user study. Figure \ref{fig:W
 
 Highlighted in figure \ref{fig:WouldYouCall_1} you can see three different scenarios with the callee in the status 'driving'. As anticipated the majority of participants would not make a call in this situation (red bars). Moreover the majority would not like to send a text message straight away, or get notified if the status of the driver changes. Regarding our concept this outcome allows us to suppose that participants pulled the correct context information out of the app and that they consider the safety of the person they want to call.
 
-\begin{figure}
+\begin{figure}[H]
 \centering
   \includegraphics[width=0.9\columnwidth]{figures/WouldYouCall_2}
   \caption{User Study: Would you make the call (status driving/with urgent call-trigger)}~\label{fig:WouldYouCall_2}
@@ -291,7 +291,7 @@ Highlighted in figure \ref{fig:WouldYouCall_1} you can see three different scena
 
 Contrary to the confirmed hypotheses shown in figure \ref{fig:WouldYouCall_1} (people will not make the call when they see the callee is driving), we found three 'driving' scenarios in which the participants would in fact make the call, although the callee is displayed as driving. Figure \ref{fig:WouldYouCall_2} focuses on these three scenarios with a majority of participants making the call (green bars). Discussion with our participants provided enough feedback to ensure that these decisions were based on the call-trigger (the reason they had to make the call). With call-triggers getting urgent (an emergency in the family for instance), people tend to ignore the context of the callee. Consulting with the participants we decided that users should always have the possibility to make calls in case of emergencies and that blocking calls completely is ineligible.
 
-\begin{figure}
+\begin{figure}[H]
 \centering
   \includegraphics[width=0.9\columnwidth]{figures/WouldYouCall_3}
   \caption{User Study: Would you make the call (status still)}~\label{fig:WouldYouCall_3}
@@ -299,13 +299,13 @@ Contrary to the confirmed hypotheses shown in figure \ref{fig:WouldYouCall_1} (p
 
 To gain even more proof of our concept we generated two scenarios with the callee being in the status 'still'. Figure \ref{fig:WouldYouCall_3} focuses on these two scenarios and provides assurance that participants perceive our provided context information correctly and make their call straight away.
 
-\begin{figure}
+\begin{figure}[H]
 \centering
   \includegraphics[width=0.9\columnwidth]{figures/WhatAreYouWillingToShare}
   \caption{User Study: What information are you willing to share}~\label{fig:WhatAreYouWillingToShare}
 \end{figure}
 
-In figure \ref{fig:WhatAreYouWillingToShare}
+With figure \ref{fig:WhatAreYouWillingToShare} we try to visualise the willingness of our participants to share context information with their phone contacts. After running through the previous ten scenarios we made sure that the participants understood the importance of the provided information and that more information might lead to a better understanding of the callee status (traffic situation, stress level and so on). Regarding the figure, the y-axis shows different information we would be able to provide in our concept app, the x-axis shows the amount of participants willing (green) or not willing (red) to share this information.
 
 
 \section{Conclusion and Future Work}
