--- a/ATH_Paper_CCC.tex
+++ b/ATH_Paper_CCC.tex
@@ -308,9 +308,13 @@ To gain even more proof of our concept we generated two scenarios with the calle
 With figure \ref{fig:WhatAreYouWillingToShare} we try to visualise the willingness of our participants to share context information with their phone contacts. After running through the previous ten scenarios we made sure that the participants understood the importance of the provided information and that more information might lead to a better understanding of the callee status (traffic situation, stress level and so on). Regarding the figure, the y-axis shows different information we would be able to provide in our concept app, the x-axis shows the amount of participants willing (green) or not willing (red) to share this information. As we can see, the willingness to share information is to be considered. While basic user information like the status (driving, cycling, still) or the availability of a hands-free unit is likely to being shared, more specific information like the target location or the precise user coordinates are not want to be published throughout the users contacts. Again consulting with our participants we found out that the willingness of information sharing increases, if the users were able to decide with information is provided for which contact in their lists. Carrying on this thought, participants ask for a grouping options (for instance 'family', 'friends', 'work') to adjust information sharing by hand.
 
 
-\section{Conclusion and Future Work}
+\section{Conclusion}
+Concluding our user study we can say that the visual processing of the context information provided by our application is perceived correctly. The currently implemented degree of information, as seen in figure \ref{fig:app} is regarded as sufficient to distinguish between the three main statuses driving, cycling and still. In addition we figured out, that the reason why calls are being made might in fact make calls more important than safety concerns with the callee being in a driving situation. Moreover we had interesting insights in data privacy concerns of possible users, which make concept adjustments necessary to improve willingness to share information.
 
-TODO: put text here
+TODO: Conclusion of Concept and App
+
+\section{Future Work}
+
 
 \section{Acknowledgments}
 
