--- a/ATH_Paper_CCC.tex
+++ b/ATH_Paper_CCC.tex
@@ -311,10 +311,12 @@ With figure \ref{fig:WhatAreYouWillingToShare} we try to visualise the willingne
 \section{Conclusion}
 Concluding our user study we can say that the visual processing of the context information provided by our application is perceived correctly. The currently implemented degree of information, as seen in figure \ref{fig:app} is regarded as sufficient to distinguish between the three main statuses driving, cycling and still. In addition we figured out, that the reason why calls are being made might in fact make calls more important than safety concerns with the callee being in a driving situation. Moreover we had interesting insights in data privacy concerns of possible users, which make concept adjustments necessary to improve willingness to share information.
 
-TODO: Conclusion of Concept and App
+TODO: Conclusion of Concept and App?
 
 \section{Future Work}
+To analyse user behaviour more closely we could think of reworking part of our application so it can be published in the Android app store. As this would exceed our current server capacities we would have to switch back-end strategies, as well as implement an appropriate logging tool to keep track of the generated user data.
 
+TODO: Whats left to do?
 
 \section{Acknowledgments}
 
